Treasury module- print button

--- a/views/treasury.xml
+++ b/views/treasury.xml
@@ -10,12 +10,15 @@
             </tree>
         </field>
     </record>
-    confirm="Are you sure you want to do this?"
+
     <record id="treasury_checkbook_view_form" model="ir.ui.view">
-        <field name="name">treasury.checkbook.view.tree</field>
+        <field name="name">treasury.checkbook.view.form</field>
         <field name="model">treasury.checkbook</field>
         <field name="arch" type="xml">
             <form>
+                <header>
+                    <field name="state" widget="statusbar" attrs="{'invisible':[('check_ids','=',[])]}"/>
+                </header>
                 <sheet>
                     <group>
                         <group>
@@ -24,7 +27,7 @@
                                    widget="selection"/>
                             <field name="bank_account_id"/>
                             <field name="company_id" groups="base.group_multi_company"/>
-                            <field name="display_name"/>
+                            <field name="display_name" attrs="{'invisible':[('check_ids','=',[])]}"/>
 
                         </group>
                         <group>
@@ -37,7 +40,7 @@
                                    attrs="{'invisible':[('select_count','!=','custom_count')], 'readonly':[('check_ids','!=',[])]}"/>
                             <field name="remained" attrs="{'invisible':[('check_ids','=',[])]}"/>
                         </group>
-                        <field name="check_ids" attrs="{'readonly':[('check_ids','!=',[])]}" readonly="1"/>
+                        <field name="check_ids" readonly="1"/>
                         <group>
                             <button name="cancel_all" string="cancel all" type="object"
                                     confirm="Are you sure you want to do this?" class="btn-primary"
@@ -62,7 +65,64 @@
             </p>
         </field>
     </record>
+
     <menuitem id="treasury_checkbook_menu_main" name="Treasury" web_icon=""/>
     <menuitem id="treasury_checkbook_menu" name="Treasury Checkbook" parent="treasury_checkbook_menu_main"
               action="treasury_checkbook_action_view_tree"/>
+
+
+    <record id="treasury_check_view_tree" model="ir.ui.view">
+        <field name="name">treasury.check.view.tree</field>
+        <field name="model">treasury.check</field>
+        <field name="arch" type="xml">
+            <tree>
+                <field name="name"/>
+                <field name="date_due"/>
+                <field name="amount"/>
+                <field name="beneficiary"/>
+                <field name="reason"/>
+            </tree>
+        </field>
+    </record>
+
+    <record id="treasury_check_view_form" model="ir.ui.view">
+        <field name="name">treasury.check.view.form</field>
+        <field name="model">treasury.check</field>
+        <field name="arch" type="xml">
+            <form>
+                <header>
+                    <button name="print_check" string="print" type="object" class="btn-primary"/>
+                    <field name="state" widget="statusbar"/>
+                </header>
+                <sheet>
+                    <group>
+                        <group>
+                            <field name="name"/>
+                            <field name="date_due" attrs="{'readonly':[('state','not in',['new', 'draft'])]}"/>
+                        </group>
+                        <group>
+                            <field name="amount" attrs="{'readonly':[('state','not in',['new', 'draft'])]}"/>
+                            <field name="beneficiary" attrs="{'readonly':[('state','not in',['new', 'draft'])]}"/>
+                            <field name="reason" attrs="{'readonly':[('state','not in',['new', 'draft'])]}"/>
+                        </group>
+                    </group>
+                </sheet>
+
+            </form>
+        </field>
+    </record>
+
+    <record id="treasury_check_action_view_tree" model="ir.actions.act_window">
+        <field name="name">Treasury Check</field>
+        <field name="res_model">treasury.check</field>
+        <field name="view_mode">tree,form</field>
+        <field name="help" type="html">
+            <p class="o_view_nocontent_smiling_face">
+                Create your first check!
+            </p>
+        </field>
+    </record>
+
+    <menuitem id="treasury_check_menu" name="Treasury Check" parent="treasury_checkbook_menu_main"
+              action="treasury_check_action_view_tree"/>
 </odoo>
