--- a/views/treasury.xml
+++ b/views/treasury.xml
@@ -70,13 +70,12 @@
     <menuitem id="treasury_checkbook_menu" name="Treasury Checkbook" parent="treasury_checkbook_menu_main"
               action="treasury_checkbook_action_view_tree"/>
 
-
+<!--decoration-danger="state=='delivered' or (date_due and date_due &lt;= current_date)"-->
     <record id="treasury_check_view_tree" model="ir.ui.view">
         <field name="name">treasury.check.view.tree</field>
         <field name="model">treasury.check</field>
         <field name="arch" type="xml">
             <tree decoration-success="state=='new' or state=='draft'" decoration-info="state=='printed'"
-                  decoration-danger="state=='delivered' or (date_due and date_due &gt;= current_date)"
                   decoration-bf="state=='delivered'"
                   decoration-muted="state=='canceled' or state=='cleaned'">
                 <field name="name"/>
