Treasury module- WIP phase 3, define abstract model treasury.in_out_coming for incoming and outgoing model and revise create function to set guaranty when it has not been set in onchange type

--- a/views/treasury_outgoing_views.xml
+++ b/views/treasury_outgoing_views.xml
@@ -43,7 +43,7 @@
                                    attrs="{'readonly':[('type','in',['promissory_note', 'bank_guaranty'])]}"
                                    required="1"/>
                             <field name="expected_return_by"
-                                   attrs="{'invisible':[('guaranty','==',False)], 'required':[('guaranty','==',True)]}"/>
+                                   attrs="{'invisible':[('guaranty','=',False)], 'required':[('guaranty','=',True)]}"/>
                             <field name="checkbook_id" attrs="{'invisible':[('type','!=','check')]}"/>
                             <field name="company_id" groups="base.group_multi_company"
                                    attrs="{'readonly':[('state','not in',['new', 'draft'])]}" required="1"/>
