Treasury module- WIP phase 3, add currency_id to incoming and outgoing view

--- a/views/treasury_outgoing_views.xml
+++ b/views/treasury_outgoing_views.xml
@@ -55,6 +55,8 @@
                                    domain="[('type', '=', 'type')]"/>
                             <field name="amount" attrs="{'readonly':[('state','not in',['new', 'draft'])]}"
                                    required="1"/>
+                            <field name="currency_id" attrs="{'readonly':[('state','not in',['new', 'draft'])]}"
+                                   required="1"/>
                             <field name="beneficiary" attrs="{'readonly':[('state','not in',['new', 'draft'])]}"
                                    required="1"/>
                             <field name="reason" attrs="{'readonly':[('state','not in',['new', 'draft'])]}"
