--- a/views/treasury_incoming_views.xml
+++ b/views/treasury_incoming_views.xml
@@ -41,6 +41,7 @@
                         <group>
                             <field name="security_type_id" required="1"/>
                             <field name="amount"/>
+                            <field name="currency_id"/>
                             <field name="description"/>
                             <field name="company_id" groups="base.group_multi_company"/>
                             <field name="consignee_id"/>
