--- a/views/treasury_outgoing_views.xml
+++ b/views/treasury_outgoing_views.xml
@@ -24,13 +24,13 @@
         <field name="arch" type="xml">
             <form>
                 <header>
-                    <button name="print_doc" string="print" type="object" class="btn-primary" attrs="{'invisible':[('type','!=','check')]}"/>
-                    <button name="issue_doc" string="issue" type="object" class="btn-primary" attrs="{'invisible':[('type','=','check')]}"/>
-                    <button name="deliver_doc" string="deliver" type="object" class="btn-primary"
+                    <button name="action_print" string="print" type="object" class="btn-primary" attrs="{'invisible':[('type','!=','check')]}"/>
+                    <button name="action_issue" string="issue" type="object" class="btn-primary" attrs="{'invisible':[('type','=','check')]}"/>
+                    <button name="action_deliver" string="deliver" type="object" class="btn-primary"
                             attrs="{'invisible':[('state','!=','printed')]}"/>
-                    <button name="set_canceled" string="cancel" type="object" class="btn-primary"
+                    <button name="action_cancel" string="cancel" type="object" class="btn-primary"
                             attrs="{'invisible':[('state','=',['delivered', 'cashed'])]}"/>
-                    <button name="set_returned" string="return" type="object" class="btn-primary"
+                    <button name="action_return" string="return" type="object" class="btn-primary"
                             attrs="{'invisible':[('state','!=',['delivered', 'bounced'])]}"/>
                     <field name="state" widget="statusbar"/>
                 </header>
