treasury module, WIP add issued_by to incoming view

--- a/views/treasury_incoming_views.xml
+++ b/views/treasury_incoming_views.xml
@@ -43,8 +43,9 @@
                             <field name="description"/>
                             <field name="company_id" groups="base.group_multi_company"/>
                             <field name="consignee_id"/>
+                            <field name="issued_by"/>
                             <field name="transferred_to_id"/>
-                            <field name="scan"/>
+                            <field name="scan" required="1"/>
                         </group>
                     </group>
                 </sheet>
